it does not work

--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -20,7 +20,8 @@ article {
 </head>
 <body>
   <article>
-    <p>what is up?? let's fetch later.</p>
+    <p>Here's a static file!!!!</p>
+    <p>Go to <a href="/app">/app</a></p>
   </article>
 </body>
 </html>
